@@ -1,6 +1,8 @@
 matchbox-window-manager-2 (0.2.77-1~unreleased) unstable; urgency=low
 
-  * foo
+  Kimmo:
+  * Fixes: NB#137523 - Browser causes X damage events when not visible - tk
+    unlock case
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 26 Oct 2009 11:47:14 +0200
 
